Fix params items no-wrap

--- a/tower-web/src/styles.scss
+++ b/tower-web/src/styles.scss
@@ -257,6 +257,7 @@ code {
 
   li {
     list-style: none;
+    white-space: nowrap;
   }
 
   .list-label {
